# rss-ingest-pipeline

./: .env.example  README.md  docker-compose.yml  feed_ingest.py  feeds.yaml  main.py  ollama_client.py  pipeline.py  pyproject.toml  qdrant_store.py  settings.py
.github/instructions/: rss-pipeline-python.instructions.md
src/rss_ingest_pipeline/: models.py
src/rss_ingest_pipeline/api/: server.py
src/rss_ingest_pipeline/ingest/: cli.py  feed_ingest.py  ollama_client.py  pipeline.py  qdrant_store.py
src/rss_ingest_pipeline/mcp/: server.py
src/rss_ingest_pipeline/query/: service.py
