[project]
name = "rss-ingest-pipeline"
version = "0.1.0"
description = "Always-on RSS ingest pipeline for local Ollama summarization and Qdrant upserts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"feedparser>=6.0.11",
	"httpx>=0.28.1",
	"python-dotenv>=1.1.1",
	"pyyaml>=6.0.2",
	"qdrant-client>=1.15.1",
]
